# spellbook

./: .gitignore  README.md
.claude/: launch.json
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0704864fd521_add_thumbnail_url.py  20c55d87089e_add_artifact_studied.py  9affa31c067c_add_views_likes_dislikes_reactions.py  caad3c004d7a_initial_schema.py
backend/app/: config.py  database.py  deps.py  ingest.py  main.py  security.py  seed_data.py  telegram.py
backend/app/models/: __init__.py  artifact.py  user.py
backend/app/routers/: artifacts.py  auth.py  invites.py  misc.py  notes.py  schools.py  spells.py  users.py
backend/app/schemas/: artifact.py  auth.py
backend/scripts/: seed.py
deploy/: Caddyfile  create-lxc.sh  install.sh  spellbook-backend.service
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  arcane-text.ts  audio.ts  types.ts  utils.ts
frontend/src/lib/components/: ArcanePlayer.svelte  ArcaneRadar.svelte  ArtifactBadge.svelte  BottomNav.svelte  Corner.svelte  Icon.svelte  LineageTree.svelte  MiniCard.svelte  NavRail.svelte  OracleSearch.svelte  Plate.svelte  RelicGraph.svelte  RuneCloud.svelte  SealButton.svelte  SealRing.svelte  SectionHead.svelte  Sigil.svelte  SpellCard.svelte  StarSep.svelte  Starfield.svelte  Topbar.svelte  Viz.svelte
frontend/src/lib/stores/: auth.svelte.ts  catalog.svelte.ts  moderation.svelte.ts  oracle.svelte.ts  player.svelte.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
(+13 files in other folders)
